wiki module renamed to docs module
